--- a/styles/pokedex.css
+++ b/styles/pokedex.css
@@ -202,7 +202,7 @@
             justify-content: center;
             color: #999;
             font-size: 14px;
-            height: 90px;
+            height: 100px;
             background-color: #f7f7f7;
             border: 1px dashed #ccc;
             border-radius: 4px;
@@ -224,8 +224,11 @@
     }
 
     .container-modal {
-        height: calc(100dvh - 66px);
+        width: 100% !important;
+        height: calc(100dvh - 60px) !important;
         padding: 0px !important;
+        margin-top: 33px;
+        border-radius: 0px !important;
     }
 }
 
@@ -260,11 +263,10 @@ main {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) scale(0);
-    background: white;
-    padding: 10px;
+    background: transparent;
     border-radius: 5px;
-    width: 261px;
-    height: 459px;
+    width: 50%;
+    height: 70%;
     text-align: center;
     border-radius: 20px;
     overflow: hidden;
